--- a/src/app/shared/scss/colors.scss
+++ b/src/app/shared/scss/colors.scss
@@ -1,8 +1,10 @@
 $black: #000;
-$white: #fff;
-$lightbackground: #f5f5f5;
+$white: #FFF;
+$lightbackground: #F5F5F5;
 $darkbackground: #1A1A1A;
-$matrixRed: #f4427d;
-$red: #c83834;
-$green: #0f0;
+$matrixRed: #F4427D;
+$red: #C83834;
+$green: #0F0;
 $blue: #7633FA;
+$scrollbar: #999;
+$scrollbartrack:#E5E5E5;
