--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
 @import './app/shared/scss/colors.scss';
+@import './app/shared/scss/sizes.scss';
 
+/* Works on Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: $scrollbar $scrollbartrack;
+}
+
+/* Works on Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: $scrollbarWidth;
+}
+
+*::-webkit-scrollbar-track {
+  background: $scrollbartrack;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: $scrollbar;
+  border-radius: $scrollbarBorderRadius;
+}
